# gltest

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  fragmentShader.glsl  glad.h  gltest  main.c  shader.h  todo  unixMakefile  vertexShader.glsl
include/: fileio.h  texture.h
resources/shaders/: fragmentShader.glsl
src/: fileio.c  glad.c  main.c  shader.c  texture.c
src/shader/: vertexShader.glsl
